BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_DataUltimoTagliando__c.field-meta.xml
<CustomField>
    <fullName>CRM_DataUltimoTagliando__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data ultimo tagliando</label>
    <length>255</length>
    <type>Text</type>
</CustomField>