BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_DescrizioneStatoTagliando__c.field-meta.xml
<CustomField>
    <fullName>CRM_DescrizioneStatoTagliando__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Descrizione stato tagliando</label>
    <length>255</length>
    <type>Text</type>
</CustomField>