BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_DT__c.field-meta.xml
<CustomField>
    <fullName>CRM_DT__c</fullName>
    <formula>IF(
ISPICKVAL( CRM_ContactStatus__c  , &apos;Tagliando effettuato&apos;), CRM_CompletionDate__c ,
IF(
ISPICKVAL(CRM_ContactStatus__c  , &apos;Fissato appuntamento&apos;),  CRM_DataAppuntamento__c , NULL))</formula>
    <label>Data e ora</label>
    <type>DateTime</type>
</CustomField>