BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_ExpectedCompletionDate__c.field-meta.xml
<CustomField>
    <fullName>CRM_ExpectedCompletionDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data di completamento prevista</label>
    <type>DateTime</type>
</CustomField>