BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_FiduciariaMandati__c.field-meta.xml
<CustomField>
    <fullName>CRM_FiduciariaMandati__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fiduciaria Mandati</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>