BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_FiduciaryMandateNotes__c.field-meta.xml
<CustomField>
    <fullName>CRM_FiduciaryMandateNotes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Note - Mandati fiduciari</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>