BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_FinExpiringProducts__c.field-meta.xml
<CustomField>
    <fullName>CRM_FinExpiringProducts__c</fullName>
    <label>Fin - Prodotti in scadenza</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Qualification</valueSetName>
    </valueSet>
</CustomField>