BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_FirmaElettronicaCertificataNotes__c.field-meta.xml
<CustomField>
    <fullName>CRM_FirmaElettronicaCertificataNotes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Note - Firma elettronica qualificata</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>