BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_FondiInvestimentoCedolariNotes__c.field-meta.xml
<CustomField>
    <fullName>CRM_FondiInvestimentoCedolariNotes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Note - Fondi di Investimento Cedolari</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>