BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_FondiSicavTradizionaliNotes__c.field-meta.xml
<CustomField>
    <fullName>CRM_FondiSicavTradizionaliNotes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Note - Fondi e Sicav tradizionali</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>