BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_FormulaNumeroTagliando__c.field-meta.xml
<CustomField>
    <fullName>CRM_FormulaNumeroTagliando__c</fullName>
    <formula>&quot;Tagliando N. &quot; + text(PTF_CustomerInterviewNum__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N° Tagliando</label>
    <type>Text</type>
</CustomField>