BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_FormulaUltimaDataModifica__c.field-meta.xml
<CustomField>
    <fullName>CRM_FormulaUltimaDataModifica__c</fullName>
    <formula>IF (
				CRM_TipoCliente__c = &apos;IndustriesBusiness&apos;,
				IF (
								TODAY() - DATEVALUE(CRM_DataUltimaCompilazione__c) &lt; 120,
								IMAGE(&apos;/resource/greenCircle_small&apos;, &quot;Green&quot;,18,18) + &quot; &quot; + TEXT(DAY(DATEVALUE(CRM_DataUltimaCompilazione__c))) + &quot;/&quot; + TEXT(MONTH(DATEVALUE(CRM_DataUltimaCompilazione__c))) + &quot;/&quot; + TEXT(YEAR(DATEVALUE(CRM_DataUltimaCompilazione__c))),
								IF (
												AND (TODAY() - DATEVALUE(CRM_DataUltimaCompilazione__c) &gt;= 120, TODAY() - DATEVALUE(CRM_DataUltimaCompilazione__c) &lt; 240), 
												IMAGE(&apos;/resource/orangeCircle_small&apos;, &quot;Orange&quot;,18,18) + &quot; &quot; + TEXT(DAY(DATEVALUE(CRM_DataUltimaCompilazione__c))) + &quot;/&quot; + TEXT(MONTH(DATEVALUE(CRM_DataUltimaCompilazione__c))) + &quot;/&quot; + TEXT(YEAR(DATEVALUE(CRM_DataUltimaCompilazione__c))),
												IF (
																TODAY() - DATEVALUE(CRM_DataUltimaCompilazione__c) &gt;= 240,
																IMAGE(&apos;/resource/redCircle_small&apos;, &quot;Red&quot;,18,18) + &quot; &quot; + TEXT(DAY(DATEVALUE(CRM_DataUltimaCompilazione__c))) + &quot;/&quot; + TEXT(MONTH(DATEVALUE(CRM_DataUltimaCompilazione__c))) + &quot;/&quot; + TEXT(YEAR(DATEVALUE(CRM_DataUltimaCompilazione__c))),
																NULL
												)
								)
				),
				IF (
								CRM_ModelloDiServizio__c = &apos;Private&apos;,
								IF (
												TODAY() - DATEVALUE(CRM_DataUltimaCompilazione__c) &lt; 30,
												IMAGE(&apos;/resource/greenCircle_small&apos;, &quot;Green&quot;,18,18) + &quot; &quot; + TEXT(DAY(DATEVALUE(CRM_DataUltimaCompilazione__c))) + &quot;/&quot; + TEXT(MONTH(DATEVALUE(CRM_DataUltimaCompilazione__c))) + &quot;/&quot; + TEXT(YEAR(DATEVALUE(CRM_DataUltimaCompilazione__c))),
												IF (
																AND (TODAY() - DATEVALUE(CRM_DataUltimaCompilazione__c) &gt;= 30, TODAY() - DATEVALUE(CRM_DataUltimaCompilazione__c) &lt; 80), 
																IMAGE(&apos;/resource/orangeCircle_small&apos;, &quot;Orange&quot;,18,18) + &quot; &quot; + TEXT(DAY(DATEVALUE(CRM_DataUltimaCompilazione__c))) + &quot;/&quot; + TEXT(MONTH(DATEVALUE(CRM_DataUltimaCompilazione__c))) + &quot;/&quot; + TEXT(YEAR(DATEVALUE(CRM_DataUltimaCompilazione__c))),
																IF (
																				TODAY() - DATEVALUE(CRM_DataUltimaCompilazione__c) &gt;= 80,
																				IMAGE(&apos;/resource/redCircle_small&apos;, &quot;Red&quot;,18,18) + &quot; &quot; + TEXT(DAY(DATEVALUE(CRM_DataUltimaCompilazione__c))) + &quot;/&quot; + TEXT(MONTH(DATEVALUE(CRM_DataUltimaCompilazione__c))) + &quot;/&quot; + TEXT(YEAR(DATEVALUE(CRM_DataUltimaCompilazione__c))),
																				NULL
																)
												)
								),
								IF (
												CRM_ModelloDiServizio__c = &apos;Personal&apos;,
												IF (
																TODAY() - DATEVALUE(CRM_DataUltimaCompilazione__c) &lt; 30,
																IMAGE(&apos;/resource/greenCircle_small&apos;, &quot;Green&quot;,18,18) + &quot; &quot; + TEXT(DAY(DATEVALUE(CRM_DataUltimaCompilazione__c))) + &quot;/&quot; + TEXT(MONTH(DATEVALUE(CRM_DataUltimaCompilazione__c))) + &quot;/&quot; + TEXT(YEAR(DATEVALUE(CRM_DataUltimaCompilazione__c))),
																IF (
																				AND (TODAY() - DATEVALUE(CRM_DataUltimaCompilazione__c) &gt;= 30, TODAY() - DATEVALUE(CRM_DataUltimaCompilazione__c) &lt; 80), 
																				IMAGE(&apos;/resource/orangeCircle_small&apos;, &quot;Orange&quot;,18,18) + &quot; &quot; + TEXT(DAY(DATEVALUE(CRM_DataUltimaCompilazione__c))) + &quot;/&quot; + TEXT(MONTH(DATEVALUE(CRM_DataUltimaCompilazione__c))) + &quot;/&quot; + TEXT(YEAR(DATEVALUE(CRM_DataUltimaCompilazione__c))),
																				IF (
																								TODAY() - DATEVALUE(CRM_DataUltimaCompilazione__c) &gt;= 80,
																								IMAGE(&apos;/resource/redCircle_small&apos;, &quot;Red&quot;,18,18) + &quot; &quot; + TEXT(DAY(DATEVALUE(CRM_DataUltimaCompilazione__c))) + &quot;/&quot; + TEXT(MONTH(DATEVALUE(CRM_DataUltimaCompilazione__c))) + &quot;/&quot; + TEXT(YEAR(DATEVALUE(CRM_DataUltimaCompilazione__c))),
																								NULL
																				)
																)
												),
												NULL
								)
				)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula icona ultima data modifica</label>
    <type>Text</type>
</CustomField>