BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_FuturePlansNotes__c.field-meta.xml
<CustomField>
    <fullName>CRM_FuturePlansNotes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Note - piani futuri</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>