BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_IdeeInvestimento__c.field-meta.xml
<CustomField>
    <fullName>CRM_IdeeInvestimento__c</fullName>
    <label>Idee d&apos;investimento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Qualification</valueSetName>
    </valueSet>
</CustomField>