BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_Idx__c.field-meta.xml
<CustomField>
    <fullName>CRM_Idx__c</fullName>
    <formula>IF (
				ISPICKVAL(CRM_ContactStatus__c, &apos;Da contattare&apos;), 1,
				IF (
				    ISPICKVAL(CRM_ContactStatus__c, &apos;Da ricontattare&apos;), 2,
								IF (
								    ISPICKVAL(CRM_ContactStatus__c, &apos;Fissato appuntamento&apos;), 3, 4
								)
				)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>