BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_ImmobiliEsteroDove__c.field-meta.xml
<CustomField>
    <fullName>CRM_ImmobiliEsteroDove__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dove - Immobili estero</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>