BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_ImpImmobiliEstero__c.field-meta.xml
<CustomField>
    <fullName>CRM_ImpImmobiliEstero__c</fullName>
    <label>Valore Immobili Estero</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>