BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_InteressatoPartAsset__c.field-meta.xml
<CustomField>
    <fullName>CRM_InteressatoPartAsset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interessato ad acquisto di partec/Asset</label>
    <type>Checkbox</type>
</CustomField>