BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_Interesse_IPO__c.field-meta.xml
<CustomField>
    <fullName>CRM_Interesse_IPO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interesse IPO</label>
    <type>Checkbox</type>
</CustomField>