BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_InteressiPersonaliAltro__c.field-meta.xml
<CustomField>
    <fullName>CRM_InteressiPersonaliAltro__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Interessi personali - Altro</label>
    <type>TextArea</type>
</CustomField>