BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_InteressiPersonaliArte__c.field-meta.xml
<CustomField>
    <fullName>CRM_InteressiPersonaliArte__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Interessi personali - Arte</label>
    <type>TextArea</type>
</CustomField>