BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_InteressiPersonaliCucina__c.field-meta.xml
<CustomField>
    <fullName>CRM_InteressiPersonaliCucina__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Interessi personali - Cucina</label>
    <type>TextArea</type>
</CustomField>