BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_InteressiPersonaliCultura__c.field-meta.xml
<CustomField>
    <fullName>CRM_InteressiPersonaliCultura__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Interessi personali - Cultura</label>
    <type>TextArea</type>
</CustomField>