BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_InteressiPersonaliMotori__c.field-meta.xml
<CustomField>
    <fullName>CRM_InteressiPersonaliMotori__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Interessi personali - Motori</label>
    <type>TextArea</type>
</CustomField>