BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_InteressiPersonaliMusica__c.field-meta.xml
<CustomField>
    <fullName>CRM_InteressiPersonaliMusica__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Interessi personali - Musica</label>
    <type>TextArea</type>
</CustomField>