BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_InteressiPersonaliSport__c.field-meta.xml
<CustomField>
    <fullName>CRM_InteressiPersonaliSport__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Interessi personali - Sport</label>
    <type>TextArea</type>
</CustomField>