BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_InteressiPersonaliTemiEtici__c.field-meta.xml
<CustomField>
    <fullName>CRM_InteressiPersonaliTemiEtici__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Interessi personali - Temi Etici</label>
    <type>TextArea</type>
</CustomField>