BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_InterviewUpdateCheckNotes__c.field-meta.xml
<CustomField>
    <fullName>CRM_InterviewUpdateCheckNotes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Note - Verifica aggiornamento quest.</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>