BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_InvesteConVeicoloSocietario__c.field-meta.xml
<CustomField>
    <fullName>CRM_InvesteConVeicoloSocietario__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Investe con veicolo societario</label>
    <type>Checkbox</type>
</CustomField>