BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_IsCheckFinanziamentiImpresePop__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsCheckFinanziamentiImpresePop__c</fullName>
    <formula>OR (
				 CRM_V_BankCredit__c ,
				 CRM_V_UnfreezingOfReceivables__c ,
				 CRM_V_ShortTermFinance__c ,
				 CRM_V_LongTermFinance__c ,
				 CRM_V_SignatureCredit__c ,
				 CRM_V_OTCExchangeCoverage__c ,
				 CRM_V_OTCRatesCoverage__c ,
				 CRM_V_Leasing__c ,
				 CRM_V_Factoring__c ,
				 CRM_V_Export__c ,
				 CRM_V_DocumentaryCredits__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Check Finanziamenti Imprese compilato</label>
    <type>Checkbox</type>
</CustomField>