BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_IsCheckFinanziamentiPrivatePop__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsCheckFinanziamentiPrivatePop__c</fullName>
    <formula>OR (
				 CRM_V_Mortgage__c ,
				 CRM_V_Lombard__c ,
				 CRM_V_Loans__c ,
				 CRM_V_LeasingNautico__c ,
				 CRM_V_CessioneCredito__c ,
				 CRM_V_Other__c ,
				 CRM_V_FundsExpiringProducts__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Check Finanziamenti Private popolato</label>
    <type>Checkbox</type>
</CustomField>