BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_IsCheckFinanziarioPrivatePop__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsCheckFinanziarioPrivatePop__c</fullName>
    <formula>OR (
				 CRM_V_WalletRiskReturnStatus__c ,
				 CRM_V_WalletActivity__c ,
				 CRM_V_OtherProposals__c ,
				 CRM_V_RetentionCheck__c ,
				 CRM_V_ExtraordinaryOperations__c ,
				 CRM_V_SellingProperties__c ,
				 CRM_V_FinExpiringProducts__c ,
				 CRM_V_OrganizzazionePatrimonio__c ,
CRM_V_VarieFinanziario__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Check Finanziario Private popolato</label>
    <type>Checkbox</type>
</CustomField>