BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_IsCheckOperativitaPrivatePop__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsCheckOperativitaPrivatePop__c</fullName>
    <formula>OR (
				 CRM_V_OffertaaDistanza__c ,
				 CRM_V_OffSiteOffer__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Check Operatività Private popolato</label>
    <type>Checkbox</type>
</CustomField>