BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_IsCheckPianoAzionePersonalPop__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsCheckPianoAzionePersonalPop__c</fullName>
    <formula>OR (
				 CRM_V_CustomerAcquisition__c ,
				 CRM_V_NewCustomersAcquisition__c ,
				 CRM_V_OnboardingDevelop__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Check Piano Azione Personal popolato</label>
    <type>Checkbox</type>
</CustomField>