BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_IsCheckTransazImpresePop__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsCheckTransazImpresePop__c</fullName>
    <formula>OR (
				 CRM_V_BusinessCreditCard__c ,
				 CRM_V_POS__c ,
				 CRM_V_CBI__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Check Transaz Imprese popolato</label>
    <type>Checkbox</type>
</CustomField>